# legal_doc

./: .gitignore
client/: package-lock.json  package.json
client/src/: index.css  main.tsx
client/src/components/: ChatArea.tsx  DocumentList.tsx  Layout.tsx  MessageInput.tsx  Sidebar.tsx
client/src/components/ui/: GlassCard.tsx
client/src/pages/404/: index.tsx
client/src/pages/Home/: index.tsx
server/: .env  pyproject.toml
server/app/: main.py
server/app/api/: chat.py
server/app/core/: connection.py  settings.py
server/app/db/: mongo.py
server/app/models/: chat.py
server/app/services/: ollama_service.py  rag_service.py
server/app/utils/: limiter.py  logger.py
server/storage/4c234838-65c3-463e-bc3c-4f8442745bd3/chroma/: chroma.sqlite3
server/storage/8e99b7fd-8668-4272-9195-2477a430f189/chroma/: chroma.sqlite3
server/storage/d3de3aea-9fdf-4733-8eeb-6b7a3901a6b4/chroma/: chroma.sqlite3
