[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.125.0",
    "ollama>=0.6.1",
    "uvicorn>=0.38.0",
    "bcrypt==4.3.0",
    "slowapi>=0.1.9",
    "motor>=3.7.1",
    "chromadb>=1.3.5",
    "pymupdf>=1.26.7",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-core>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
]

[project.optional-dependencies]
cu128 = [
    "torch",
    "torchvision",
    "torchaudio",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = { index = "pytorch-cu128", extra = "cu128" }
torchvision = { index = "pytorch-cu128", extra = "cu128" }
torchaudio = { index = "pytorch-cu128", extra = "cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
